Adjust margins to prevent image cropping in some situations
It's possible that some taller product images could get cropped inadvertently at some screen sizes, this adjusts the margin to prevent that.

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -53,8 +53,8 @@
 
   &.fit
     height: calc(100vh - 400px)
-    margin: 200px
-    width: calc(100% - 400px)
+    margin: 200px 100px
+    width: calc(100% - 200px)
 
     @media screen and (max-width: $break-medium)
       height: auto
